--- a/src/main/resources/application.yaml
+++ b/src/main/resources/application.yaml
@@ -5,3 +5,6 @@ spring:
     url: jdbc:mysql://localhost:3306/file_browser?createDatabaseIfNotExist=true
     username: root
     password: 1234
+app:
+  files:
+    location: files/
